--- a/templates/articulos/listarArticulos.html
+++ b/templates/articulos/listarArticulos.html
@@ -22,7 +22,9 @@
                           <div class="card-body p-4">
                             <a class="text-decoration-none link-dark stretched-link" href="{% url 'articulos:detalleArticulos' articulo.pk %}">
                               <div class="h5 card-title mb-3">{{ articulo.titulo }}</div>
+                              <div class="text-muted fst-italic mb-2">{{articulo.fecha_publicacion}}</div>
                             </a>
+                            <a class="badge bg-secondary text-decoration-none link-light" href="#!">{{articulo.categoria_articulo}}</a>
                             <p class="card-text mb-0">{{ articulo.contenido_breve }}</p>
                           </div>
                         </div>
