--- a/templates/usuarios/registro.html
+++ b/templates/usuarios/registro.html
@@ -89,16 +89,24 @@
                                 placeholder="Apellido" required />
                             <label for="last_name">Apellido</label>
                         </div>
+                        <div class="form-floating mb-3">
+                            <input class="form-control" name="email" type="text" placeholder="correo@gmail.com" required />
+                            <label for="email">Email</label>
+                        </div>
+                        
+                        <div class="form-floating mb-3">
+                            <label class="text-sm-end" for="imagen">Imagen</label>
+                            <input class="form-control" name="imagen" type="file"                                                
+                            
+                        </div>
+                       
 
                         <div class="form-floating mb-3">
                             <input class="form-control" name="username" type="text" placeholder="Usuario" required />
                             <label for="username">Usuario</label>
                         </div>
 
-                        <div class="form-floating mb-3">
-                            <input class="form-control" name="email" type="text" placeholder="correo@gmail.com" required />
-                            <label for="email">Email</label>
-                        </div>
+                        
                         <div class="form-floating mb-3">
                             <input class="form-control" name="password1" type="password" placeholder="Contraseña" required />
                             <label for="password">Contraseña</label>
