--- a/templates/articulos/detalleArticulos.html
+++ b/templates/articulos/detalleArticulos.html
@@ -26,7 +26,7 @@
                     <!-- Post content-->
                     <section class="mb-5">
                         <p class="fs-5 mb-4">{{ articulo.contenido_completo }}</p> 
-                        {% if user.is_authenticated and user.tipo_usuario == 'colaborador' %}
+                        {% if user.is_authenticated and articulo.usuario_articulo == user or user.is_staff or user.is_superuser %}
                         <button type="button" class="btn btn-secondary btn-sm"><a class="dropdown-item"
                                 href="{% url 'articulos:editArticulo' pk=articulo.pk %}">Editar Articulo</a></button>
                         
@@ -47,6 +47,9 @@
                 <!-- seccion de comentarios-->
 
                 <section>
+                    <div class="card-body text-center">
+                        <h4 class="card-title">Comentarios:</h4>
+                    </div>
                     <div class="card bg-light">
                         <div class="card-body">
                             <!-- Comentario form -->
@@ -70,9 +73,7 @@
                             {% endif %}
 
                             <!-- prueba -->
-                            <div class="card-body text-center">
-                                <h4 class="card-title">Comentarios:</h4>
-                            </div>
+                            
                             <div class="row d-flex justify-content-center mt-100 mb-100">
                                 {% for comentario in comentarios %}
                                 <div class="col-lg-12">
@@ -90,7 +91,7 @@
                                                     <div class="comment-footer"> 
                                                         <div class="text-muted fst-italic mb-2">{{comentario.fecha_publicacion}}</div>                                                        
                                                         <span class="text-muted float-end">
-                                                            {% if comentario.usuario_comentario == user.username or user.tipo_usuario == 'colaborador' %}
+                                                            {% if comentario.usuario_comentario == user.username or user.is_staff or user.is_superuser %}
                                                             <button type="button" class="btn btn-secondary btn-sm"><a class="dropdown-item"
                                                                     href="{% url 'articulos:edit_comentario' comentario_id=comentario.pk %}">Editar</a></button>
                                                             <button type="button" class="btn btn-danger btn-sm"><a class="dropdown-item"
