--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'articulos:listarArticulos' %}">Articulos</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'contacto:mensaje' %}">Contacto</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'contacto:contacto' %}">Contacto</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'acerca_de' %}">Acerca de</a></li>
                 {% if user.is_authenticated and user.is_staff or user.is_superuser  %}
                 <li class="nav-item dropdown">
