--- a/templates/articulos/addArticulo.html
+++ b/templates/articulos/addArticulo.html
@@ -4,7 +4,7 @@
 {% block titulo %}Articulo{% endblock titulo %}
 
 {% block contenido %}
-<div class="container">
+<!-- <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <form action="" method="POST" enctype="multipart/form-data" class="form-group m-4">
@@ -20,5 +20,62 @@
             </form>
         </div>
     </div>
-</div>
+</div> -->
+
+<section class="py-5">
+    <div class="container px-5">
+        <!-- Contact form-->
+        <div class="bg-light rounded-3 py-5 px-4 px-md-5 mb-5">
+            <div class="text-center mb-5">
+                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i>
+                </div>
+                <h1 class="fw-bolder">Crear Artículo</h1>
+            </div>
+            <div class="row gx-5 justify-content-center">
+                <div class="col-lg-8 col-xl-6">
+                    <form method="post">
+                        {% csrf_token %}
+                        {% if messages %}
+                        {% for message in messages %}
+                        <div class="alert alert-danger">{{ message }}</div>
+                        {% endfor %}
+                        {% endif %}
+                        {{form.errors}}
+
+                        <div class="form-floating mb-3">
+                            <input class="form-control" name="titulo" type="text" placeholder="Título" required />
+                            <label for="titulo">Título</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <textarea class="form-control" name="contenido_breve" type="text"
+                                placeholder="Contenido Breve" style="height: 10rem" required"></textarea>
+                            <label for="contenido_breve">Contenido Breve</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <textarea class="form-control" name="contenido_completo" type="text"
+                                placeholder="Contenido Completo" style="height: 10rem" required"></textarea>
+                            <label for="contenido_completo">Contenido Completo</label>
+                        </div> 
+                        <label for="imagen">Seleccione la Imagen:</label>                       
+                        <div class="form-floating mb-3">
+                            <input type="file" class="imagen" name="imagen">
+                        </div>
+
+                        <div class="form-floating mb-3">                             
+                            <p>Categoría: {{form.categoria_articulo}} </p>                                     
+                        </div>
+                        
+                        
+
+                            <!-- Submit Button-->
+                            <div class="d-grid"><button type="submit" value="registrarse"
+                                    class="btn btn-primary btn-lg ">Registrar</button></div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
 {% endblock contenido %}
