--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="{% url 'articulos:addarticulo' %}">Crear Articulo</a></li>
+                        <li><a class="dropdown-item" href="{% url 'articulos:addcategoria' %}">Crear Categoría</a></li>
                         <li><a class="dropdown-item" href="{% url 'articulos:listarCategorias' %}">Categorias</a></li>
                     </ul>
                 </li>
