falta add articulo y formularios de editar que vinculen con datos de la base

--- a/templates/categorias/edit_categoria.html
+++ b/templates/categorias/edit_categoria.html
@@ -4,6 +4,6 @@
 <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Guardar Cambios</button>
+    <button class="btn btn-primary btn-sm" type="submit">Guardar Cambios</button>
 </form>
 {% endblock contenido %}
