--- a/templates/contacto/contacto.html
+++ b/templates/contacto/contacto.html
@@ -7,7 +7,6 @@
 
 <section class="py-5">
     <div class="container px-5">
-       
         <div class="bg-light rounded-3 py-5 px-4 px-md-5 mb-5">
             <div class="text-center mb-5">                
                 <h1 class="fw-bolder">Contacto:</h1>
@@ -27,8 +26,7 @@
                             <label for="email">Email</label>
                         </div>
                         <div class="form-floating mb-3">
-                            <input class="form-control" name="telefono" type="text" 
-                                required />
+                            <input class="form-control" name="telefono" type="text" placeholder="Teléfono" required />
                             <label for="telefono">Teléfono</label>
                         </div>
                         <div class="form-floating mb-3">
@@ -36,9 +34,6 @@
                                 style="height: 10rem" required"></textarea>
                             <label for="mensaje">Mensaje</label>
                         </div>
-
-                        
-                       
                         <div class="d-grid"><button class="btn btn-primary btn-lg " type="submit">Enviar</button></div>
                     </form>
                 </div>
