--- a/templates/articulos/addArticulo.html
+++ b/templates/articulos/addArticulo.html
@@ -4,7 +4,7 @@
 {% block titulo %}Articulo{% endblock titulo %}
 
 {% block contenido %}
-<div class="container">
+<!-- <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <form action="" method="POST" enctype="multipart/form-data" class="form-group m-4">
@@ -20,5 +20,61 @@
             </form>
         </div>
     </div>
+</div> -->
+
+<div class="container px-5">
+    <div class="bg-light rounded-3 py-5 px-4 px-md-5 mb-5">
+        <div class="text-center mb-5">
+            <h1 class="fw-bolder">Crear Artículo:</h1>
+        </div>
+        <div class="row gx-5 justify-content-center">
+            <div class="col-lg-8 col-xl-6">
+                <form method="post">
+                    {% csrf_token %}                    
+
+                    <div class="form-floating mb-3">
+                        <input class="form-control" name="titulo" type="text" placeholder="Título" required />
+                        <label for="titulo">Título</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <textarea class="form-control" name="contenido_breve" type="text" placeholder="Contenido Breve" style="height: 10rem"
+                            required"></textarea>                            
+                        <label for="contenido_breve">Contenido Breve</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <textarea class="form-control" name="contenido_completo" type="text" placeholder="Contenido Completo"
+                            style="height: 10rem" required"></textarea>
+                        <label for="contenido_completo">Contenido Completo</label>
+                    </div>
+
+                    <div class="form-floating mb-3">
+                        Categorias: {{ form.categoria_articulo }}
+                        
+                    </div>
+                    <div class="form-floating mb-3">
+                        Seleccione la imagen: {{ form.imagen}}
+                    </div>
+                    
+                    <div class="d-grid"><button class="btn btn-primary btn-lg " type="submit">Enviar</button></div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 {% endblock contenido %}
