--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,8 @@
             {% for message in messages %}
                 {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR%}
                     <p  {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</p>
+                {% else %}
+                    <p> {{ message.tags }} </p>
                 {% endif %}
             {% endfor %}
         </ul>
