--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -14,8 +14,8 @@
             <div class="text-center mb-5">
                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i>
                 </div>
-                <h1 class="fw-bolder">Get in touch </h1>
-                <p class="lead fw-normal text-muted mb-0">We'd love to hear from you</p>
+                <h1 class="fw-bolder">Contactanos</h1>
+                <p class="lead fw-normal text-muted mb-0">Es gratis!</p>
             </div>
             <div class="row gx-5 justify-content-center">
                 <div class="col-lg-8 col-xl-6">
@@ -26,7 +26,7 @@
                     <!-- To make this form functional, sign up at-->
                     <!-- https://startbootstrap.com/solution/contact-forms-->
                     <!-- to get an API token!-->
-                    <form method="POST" id="contactForm" data-sb-form-api-token="API_TOKEN">
+                    <form method="POST" id="contactForm" data-sb-form-api-token="API_TOKEN" action=".">
                         <table>
                             {% csrf_token %}
                             <!-- Name input-->
