--- a/templates/articulos/addArticulo.html
+++ b/templates/articulos/addArticulo.html
@@ -33,7 +33,7 @@
             </div>
             <div class="row gx-5 justify-content-center">
                 <div class="col-lg-8 col-xl-6">
-                    <form method="post">
+                    <form method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         {% if messages %}
                         {% for message in messages %}
