--- a/templates/articulos/addArticulo.html
+++ b/templates/articulos/addArticulo.html
@@ -29,7 +29,7 @@
             <div class="text-center mb-5">
                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i>
                 </div>
-                <h1 class="fw-bolder">Crear Artículo</h1>
+                <h2 class="fw-bolder">Crear Artículo</h2>
             </div>
             <div class="row gx-5 justify-content-center">
                 <div class="col-lg-8 col-xl-6">
@@ -41,7 +41,6 @@
                         {% endfor %}
                         {% endif %}
                         {{form.errors}}
-
                         <div class="form-floating mb-3">
                             <input class="form-control" name="titulo" type="text" placeholder="Título" required />
                             <label for="titulo">Título</label>
@@ -56,13 +55,14 @@
                                 placeholder="Contenido Completo" style="height: 10rem" required"></textarea>
                             <label for="contenido_completo">Contenido Completo</label>
                         </div> 
-                        <label for="imagen">Seleccione la Imagen:</label>                       
+                        <label for="imagen">Seleccione la Imagen:</label>
                         <div class="form-floating mb-3">
-                            <input type="file" class="imagen" name="imagen">
+                            <div class="custom-file">
+                                <input type="file" name="imagen" class="custom-file-input" id="customFile">
+                            </div>
                         </div>
-
                         <div class="form-floating mb-3">                             
-                            <p>Categoría: {{form.categoria_articulo}} </p>                                     
+                            <p>Categoría: {{form.categoria_articulo}} </p> 
                         </div>
                             <!-- Submit Button-->
                             <div class="d-grid"><button type="submit" value="registrarse"
