--- a/templates/articulos/listarArticulos.html
+++ b/templates/articulos/listarArticulos.html
@@ -49,7 +49,7 @@
             <div class="row">
               <div class="col-sm-6">
                 <ul class="list-unstyled mb-0">
-                  <li><a class="dropdown-item" href="{% url 'articulos:listarArticulos' %}">Todas</a></li>
+                  <li><a class="dropdown-item" href="{% url 'articulos:listarArticulos' %}"><strong>Todas</strong></a></li>
                   {% for cat in categorias  %}
                     <li><a class="dropdown-item" href="?categoria={{ cat.pk }}">{{ cat.descripcion}}</a></li>
                   {% endfor %}                
