--- a/templates/categorias/addCategoria.html
+++ b/templates/categorias/addCategoria.html
@@ -4,21 +4,23 @@
 {% block titulo %}Categoria{% endblock titulo %}
 
 {% block contenido %}
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <form action="" method="POST" enctype="multipart/form-data" class="form-group m-4">
-                <h2>Crear categoria</h2>
-                <div class="mb-3">
+<div class="container px-5">
+    
+    <div class="bg-light rounded-3 py-5 px-4 px-md-5 mb-5">
+        <h2 class="fw-bolder">Crear Categoría</h2>
+
+        <div class="row gx-5 justify-content-center">
+            <div class="col-lg-8 col-xl-6">
+                <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
+                    {% csrf_token %}
+                    {{ form.as_table }}
+                    <button class="btn btn-primary btn-sm " type="submit">Guardar</button>
+                </form>
 
-                    {{ form.as_p }}
-                </div>
 
-                <div class="text-center">
-                    <button type="submit" class="btn btn-primary">Guardar</button>
-                </div>
-            </form>
+            </div>
+
         </div>
     </div>
 </div>
