--- a/templates/articulos/listarArticulos.html
+++ b/templates/articulos/listarArticulos.html
@@ -26,6 +26,7 @@
                             </a>
                             <a class="badge bg-secondary text-decoration-none link-light" href="#!">{{articulo.categoria_articulo}}</a>
                             <p class="card-text mb-0">{{ articulo.contenido_breve }}</p>
+                            <div class="text-end fst-italic mb-2">{{articulo.usuario_articulo.first_name}}, {{articulo.usuario_articulo.last_name}}</div>
                           </div>
                         </div>
                       </div>
