botones de cancelar y algunos permisos de usuarios

--- a/templates/articulos/listarArticulos.html
+++ b/templates/articulos/listarArticulos.html
@@ -13,6 +13,7 @@
             <section class="py-5">
               <div class="container px-5">
                 <div class="row gx-5">
+                  <!-- LISTA TODOS LOS ARTICULOS Y SOLO MUESTRA BORRAR Y EDITAR SI ES EL AUTOR O SUPER ADMIN -->
 
                   {% if articulos %}
                     {% for articulo in articulos %}
