--- a/templates/articulos/addArticulo.html
+++ b/templates/articulos/addArticulo.html
@@ -60,13 +60,21 @@
                             <div class="custom-file">
                                 <input type="file" name="imagen" class="custom-file-input" id="customFile">
                             </div>
-                        </div>
+                        </div>                      
                         <div class="form-floating mb-3">                             
                             <p>Categoría: {{form.categoria_articulo}} </p> 
                         </div>
+
                             <!-- Submit Button-->
-                            <div class="d-grid"><button type="submit" value="registrarse"
-                                    class="btn btn-primary btn-lg ">Registrar</button></div>
+                            <div class="d-grid">
+                                <span class="text-center">
+                                <button type="submit" value="registrarse" class="btn btn-primary btn-lg ">Registrar</button>
+                                    <span class="text-center ">
+                                        <button type="button" class="btn btn-primary btn-lg"><a class="dropdown-item"
+                                                href="{% url 'articulos:listarArticulos' %}">Cancelar</a></button>
+                                    </span>
+                                </span>
+                            </div>
                     </form>
                 </div>
             </div>
