--- a/templates/articulos/edit_articulo.html
+++ b/templates/articulos/edit_articulo.html
@@ -23,8 +23,17 @@
                     {% csrf_token %}
                     <table>
                         {{ form.as_table }}
-                    </table>                
-                    <div class="d-grid"><button class="btn btn-primary btn-lg " type="submit">Guardar Cambios</button></div>
+                    </table>       
+                    <div class="d-grid">
+                        <span class="text-center">
+                            <button type="submit" value="registrarse" class="btn btn-primary btn-lg ">Guardar</button>
+                            <span class="text-center ">
+                                <button type="button" class="btn btn-primary btn-lg"><a class="dropdown-item"
+                                        href="{% url 'articulos:listarArticulos' %}">Cancelar</a></button>
+                            </span>
+                        </span>
+                    </div>
+                    
                 </form>
             </div>
         </div>
