--- a/templates/articulos/edit_comentario.html
+++ b/templates/articulos/edit_comentario.html
@@ -1,9 +1,33 @@
 {% extends 'base.html' %}
 {% block contenido %}
-<h2>Editar Comentario</h2>
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button class="btn btn-primary btn-sm" type="submit">Guardar</button>
-</form>
+
+
+<div class="container px-5">
+    <div class="bg-light rounded-3 py-5 px-4 px-md-5 mb-5">
+        <h2 class="fw-bolder">Editar Categoría:</h2>
+        <div class="row gx-5 justify-content-center">
+            <div class="col-lg-8 col-xl-6">
+                <form method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    
+                    
+                    
+                </form>
+            </div>
+            <span class="text-center justify-content-center">
+                <button type="submit" value="registrarse" class="btn btn-primary btn-sm ">Guardar</button>
+                <span class="text-center ">
+                    <button type="button" class="btn btn-primary btn-sm"><a class="dropdown-item"
+                            href="{% url 'home' %}">Cancelar</a></button>
+                </span>
+            </span>
+        </div>
+    </div>
+</div>
+
+
+
+
 {% endblock contenido %}
