--- a/templates/categorias/edit_categoria.html
+++ b/templates/categorias/edit_categoria.html
@@ -1,13 +1,7 @@
 {% extends 'base.html' %}
 {% block contenido %}
-<!-- <h2>Editar Categoria</h2>
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button class="btn btn-primary btn-sm" type="submit">Guardar Cambios</button>
-</form> -->
+
 <div class="container px-5">
-    
     <div class="bg-light rounded-3 py-5 px-4 px-md-5 mb-5">
         <h2 class="fw-bolder">Editar Categoría</h2>
         <div class="row gx-5 justify-content-center">
@@ -17,20 +11,12 @@
                     {% csrf_token %}
                     {{ form.as_table }}                        
                     <button class="btn btn-primary btn-sm " type="submit">Guardar</button>
+                        <button type="button" class="btn btn-primary btn-sm"><a class="dropdown-item"
+                                href="{% url 'home' %}">Cancelar</a></button>
                 </form>
-                
-                
             </div>
-            
         </div>
     </div>
 </div>
-
-
-
-
-
-
-
 
 {% endblock contenido %}
