--- a/templates/categorias/listarCategorias.html
+++ b/templates/categorias/listarCategorias.html
@@ -37,14 +37,15 @@
                             </tbody>
                                 
                         </table>
-
-
-
-
-
-                </div>
+                        
+                </div>                
             </div>
-        </div>       
+            <span class="text-center">
+                <button type="button" class="btn btn-primary btn-sm"><a class="dropdown-item"
+                        href="{% url 'home' %}">Cancelar</a></button>
+            </span>
+        </div>
+        
     
     {% else %}
         <h2>No hay Categorias</h>       
