--- a/templates/contacto/listarMensajes.html
+++ b/templates/contacto/listarMensajes.html
@@ -21,6 +21,7 @@
                                     <th scope="col">Teléfono</th>
                                     <th scope="col">Mensaje</th>
                                     <th scope="col">Fecha</th>
+                                    <th scope="col">Eliminar</th>
                                 </tr>
                             </thead>
                             {% for mensaje in mensajes %}
@@ -32,12 +33,18 @@
                                     <td>{{ mensaje.telefono }}</td>
                                     <td>{{ mensaje.mensaje }}</td>
                                     <td>{{ mensaje.fecha }}</td>
+                                    <td><a name="delete_mensaje" class="btn btn-danger btn-sm" href="{% url 'contacto:delete_mensaje' mensaje.pk %}"
+                                        role="button">Borrar</a></td>
                                 </tr>
                             </tbody>
                             {% endfor %}
                         </table>
                     </div>
                 </div>
+                <span class="text-center">
+                    <button type="button" class="btn btn-primary btn-sm"><a class="dropdown-item"
+                            href="{% url 'home' %}">Cancelar</a></button>
+                </span>
             </div>
      
    
