sin errores aparentes

--- a/templates/base.html
+++ b/templates/base.html
@@ -57,15 +57,18 @@
             
                 <form class="d-flex">
                     {% if user.is_authenticated %}
-                    
-                    <button class="btn btn-outline-light" type="button"><strong>{{ user.username }}</strong></button>
-                    <!-- <li class="nav-item"><a href="#">Hola<strong> {{ user.username }}</strong></a></li> -->
-                    <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}"><strong>Cerra Sesión</strong></a></li>
+                        {% if not user.is_superuser and not user.is_staff  %}
+                            <button class="btn btn-outline-light" type="button"><strong>{{ user.username }}</strong>____(Miembro)</button>
+                        
+                        {% elif user.is_staff and not user.is_superuser  %}
+                            <button class="btn btn-outline-light" type="button"><strong>{{ user.username }}</strong>____(Colaborador)</button>
+                        {% else %}
+                            <button class="btn btn-outline-light" type="button"><strong>{{ user.username }}</strong>____(SuperUser)</button>
+                        {% endif %}
+                        <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}"><strong>Cerra Sesión</strong></a></li>
                     {% else %}
-                    <li class="nav-item"><a class="nav-link" href="{% url 'registro' %}"><strong>Registrarse</strong></a></li>
-                    <li class="nav-item"><a class="nav-link " href="{% url 'login' %}"><strong>Iniciar Sesión</strong></a></li>
-                    
-                    
+                        <li class="nav-item"><a class="nav-link" href="{% url 'registro' %}"><strong>Registrarse</strong></a></li>
+                        <li class="nav-item"><a class="nav-link " href="{% url 'login' %}"><strong>Iniciar Sesión</strong></a></li>
                     {% endif %}
                 </form>
                 
