--- a/templates/categorias/listarCategorias.html
+++ b/templates/categorias/listarCategorias.html
@@ -10,10 +10,10 @@
 <h2>Listar Categorias:</h2>
     
         <div class="row justify-content-start">
-            <div class="col-md-6">
+            <div class="col-md-10">
                 <div class="mb-3">                   
                        
-                        <table class="table">
+                        <table class="table table-striped">
                             <thead>
                                 <tr>
                                     <th scope="col">#</th>
@@ -40,7 +40,7 @@
                         
                 </div>                
             </div>
-            <span class="text-center">
+            <span class="text-end">
                 <button type="button" class="btn btn-primary btn-sm"><a class="dropdown-item"
                         href="{% url 'home' %}">Cancelar</a></button>
             </span>
