--- a/templates/contacto/listarMensajes.html
+++ b/templates/contacto/listarMensajes.html
@@ -13,7 +13,7 @@
             <div class="row justify-content-start">
                 <div class="col-md-6">
                     <div class="mb-3">
-                        <table class="table">
+                        <table class="table table-bordered">
                             <thead>
                                 <tr>
                                     <th scope="col">Nombre</th>
