--- a/templates/articulos/edit_comentario.html
+++ b/templates/articulos/edit_comentario.html
@@ -1,28 +1,40 @@
 {% extends 'base.html' %}
 {% block contenido %}
 
+<!-- <h2>Editar Articulo</h2>
+<form action="" method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Guardar cambios</button>
+</form>  
+ -->
 
-<div class="container px-5">
+
+
+ <div class="container px-5">
     <div class="bg-light rounded-3 py-5 px-4 px-md-5 mb-5">
-        <h2 class="fw-bolder">Editar Categoría:</h2>
+        <div class="text-center mb-5">
+            <h2 class="fw-bolder">Editar Comentario:</h2>
+        </div>
         <div class="row gx-5 justify-content-center">
             <div class="col-lg-8 col-xl-6">
                 <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    
-                    
+                    <table>
+                        {{ form.as_table }}
+                    </table>       
+                    <div class="d-grid">
+                        <span class="text-center">
+                            <button type="submit" value="editar_categoria" class="btn btn-primary btn-sm ">Guardar</button>
+                            <span class="text-center ">
+                                <button type="button" class="btn btn-primary btn-sm"><a class="dropdown-item"
+                                        href="{% url 'home' %}">Cancelar</a></button>
+                            </span>
+                        </span>
+                    </div>
                     
                 </form>
             </div>
-            <span class="text-center justify-content-center">
-                <button type="submit" value="registrarse" class="btn btn-primary btn-sm ">Guardar</button>
-                <span class="text-center ">
-                    <button type="button" class="btn btn-primary btn-sm"><a class="dropdown-item"
-                            href="{% url 'home' %}">Cancelar</a></button>
-                </span>
-            </span>
         </div>
     </div>
 </div>
