--- a/templates/usuarios/registro.html
+++ b/templates/usuarios/registro.html
@@ -15,7 +15,7 @@
             </div>
             <div class="row gx-5 justify-content-center">
                 <div class="col-lg-8 col-xl-6">
-                    <form method="post">{% csrf_token %}
+                    <form method="post"enctype="multipart/form-data">{% csrf_token %}
                         {% if messages %}
                         {% for message in messages %}
                         <div class="alert alert-danger">{{ message }}</div>
