--- a/templates/articulos/detalleArticulos.html
+++ b/templates/articulos/detalleArticulos.html
@@ -66,7 +66,11 @@
                                         <div class="comment-widgets">
                                             <!-- Comment Row -->
                                             <div class="d-flex flex-row comment-row">
-                                                <div class="p-2"><img src="{{user.imagen.url}}"
+                                                <!-- BUSCAR IMAGEN DEL USUARIO -->
+                                                
+
+
+                                                <div class="p-2"><img src="{{ user.imagen.url}}"
                                                         alt="user" width="50" class="rounded-circle"></div>
                                                 <div class="comment-text active w-100">
                                                     <h6 class="font-medium">
