corregido imagen del usuario en los comentarios

--- a/templates/articulos/detalleArticulos.html
+++ b/templates/articulos/detalleArticulos.html
@@ -70,7 +70,7 @@
                                                 
 
 
-                                                <div class="p-2"><img src="{{ user.imagen.url}}"
+                                                <div class="p-2"><img src="{{ comentario.usuario_comentario.imagen.url}}"
                                                         alt="user" width="50" class="rounded-circle"></div>
                                                 <div class="comment-text active w-100">
                                                     <h6 class="font-medium">
